--- a/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
+++ b/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
@@ -13,13 +13,13 @@
 	    <!-- Menu -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li class="${eventPage}"><a href="Events">Vos évènements</a></li>
-			 	<li class="${createEventPage}"><a href="CreateEvent">Créer un évènement</a></li>
+				<li class="${eventPage}"><a href="${pageContext.request.contextPath}/Events">Vos évènements</a></li>
+			 	<li class="${createEventPage}"><a href="${pageContext.request.contextPath}/CreateEvent">Créer un évènement</a></li>
 			 </ul>	 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">${sessionScope.user.mail}<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="Disconnect">
+						<li><a href="${pageContext.request.contextPath}/Disconnect">
 							<span class="glyphicon glyphicon-log-out"></span> Se déconnecter
 						</a></li>
 					</ul>
