--- a/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
+++ b/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
@@ -15,9 +15,9 @@
 			<ul class="nav navbar-nav">
 				<li class="${eventPage}"><a href="${pageContext.request.contextPath}/Events">Vos évènements</a></li>
 			 	<li class="${createEventPage}"><a href="${pageContext.request.contextPath}/CreateEvent">Créer un évènement</a></li>
-			 </ul>	 
+			</ul>	 
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">"${UserName}"<span class="caret"></span></a>
+				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">${user.name} (${user.mail})<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li><a href="${pageContext.request.contextPath}/Disconnect">
 							<span class="glyphicon glyphicon-log-out"></span> Se déconnecter
