--- a/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
+++ b/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
@@ -17,7 +17,7 @@
 			 	<li class="${createEventPage}"><a href="${pageContext.request.contextPath}/CreateEvent">Créer un évènement</a></li>
 			</ul>	 
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">${user.name} (${user.mail})<span class="caret"></span></a>
+				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">${user.pseudo} (${user.mail})<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li><a href="${pageContext.request.contextPath}/Disconnect">
 							<span class="glyphicon glyphicon-log-out"></span> Se déconnecter
