--- a/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
+++ b/src/main/webapp/WEB-INF/jspf/NavAfterConnect.jspf
@@ -15,7 +15,7 @@
 			<ul class="nav navbar-nav">
 				<li class="${userEventsPage}"><a href="${pageContext.request.contextPath}/MyEvents">Mes évènements</a></li>
 			 	<li class="${createEventPage}"><a href="${pageContext.request.contextPath}/CreateEvent">Créer un évènement</a></li>
-			 	<li class="${eventsPage}"><a href="${pageContext.request.contextPath}/Events">Evènements</a></li>
+			 	<li class="${eventsPage}"><a href="${pageContext.request.contextPath}/Events">Tous les évènements</a></li>
 			</ul>	 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">${user.pseudo} (${user.mail})<span class="caret"></span></a>
