--- a/src/main/webapp/WEB-INF/jspf/NavBeforeConnect.jspf
+++ b/src/main/webapp/WEB-INF/jspf/NavBeforeConnect.jspf
@@ -6,6 +6,7 @@
 	        <span class="sr-only">Menu</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
 	      </button>
 	      <a class="navbar-brand" href="#"><strong>Event Manager</strong></a>
 	    </div>
